Added access method to get rectangle to draw

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,9 +26,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/ImageEditApplet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=\
-    ${jdk.home}/jre/lib/javaws.jar:\
-    ${jdk.home}/jre/lib/plugin.jar
+endorsed.classpath=
 excludes=
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -69,7 +67,7 @@ jnlp.applet.param.2.value="500"
 jnlp.applet.width=1024
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=applet
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.mixed.code=default
 jnlp.offline-allowed=false
 jnlp.signed=false
