--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\mich4570\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
+user.properties.file=C:\\Users\\Michael\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
